HelloUltraviolet/Fixtures/RejectedSource/Keys/WaitWhileKeyHeldLowering/Expected.uv
//! Expected diagnostic metadata for the WaitWhileKeyHeldLowering rejected-source specimen.

expectedDiagnostic("E-CON-0133", "rule.21.Lower-Wait-Key-Illegal")
